--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Bot - a Discord Bot</title>
+    <title>Arexium Next-Gen Utilities!</title>
     <link rel="stylesheet" href="assets/css/bulma.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
@@ -39,14 +39,14 @@
     >
       <div class="navbar-brand mt-2 mb-2">
         <a class="navbar-item" href="#">
-          <strong>Your Bot</strong>
+          <strong>Arexium</strong>
 
           <!-- or if you want to use image -->
-          <!-- <img
-            src="image link or path"
+          <img
+            src="assets/img/GIF_20240320_230159_628.gif"
             width="112"
             height="28"
-          /> -->
+          />
         </a>
 
         <a
@@ -112,19 +112,18 @@
           <div class="columns">
             <div class="column mr-6 mt-12" data-aos="fade-up">
               <p class="title has-text-white has-text-weight-bold">
-                Time to add [your bot] to your server.
+                Arexium: The Next Gen Utilities 
               </p>
               <p class="subtitle has-text-grey-light is-size-6 mt-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                
               </p>
               <div class="buttons">
                 <a href="#" class="button is-info">
-                  <strong>Add To Discord</strong>
+                  <strong>Add App</strong>
                 </a>
 
                 <a href="#" class="button is-primary is-outlined">
-                  <strong><i class="fa-solid fa-crown"></i> Premium</strong>
+                  <strong><i class="fa-solid fa-crown"></i> Not available</strong>
                 </a>
               </div>
             </div>
