--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <!-- or if you want to use image -->
           <img
             src="assets/img/GIF_20240320_230159_628.gif"
-            width="112"
+            width="30"
             height="28"
           />
         </a>
@@ -130,7 +130,7 @@
             <div class="column mt-6" data-aos="fade-left">
               <img
                 class="image has-image-centered vert-move mt-4"
-                src="assets/img/relaunch_day.svg"
+                src="assets/img/GIF_20240320_230159_628.gif"
                 alt="hero image"
                 style="width: 20rem;"
               />
