--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!--
-  | Website designed by JstnLT (https://jstnlt.my.id)
-  | This project is open source: https://github.com/JastinXyz/discord-bot-landing-page-web
--->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -169,12 +164,9 @@
       <div class="single-feature">
         <div class="columns mt-6">
           <div class="column mr-6">
-            <h4 class="title">Feature <span class="blurple">#1</span></h4>
+            <h4 class="title">Modular<span class="blurple">Design</span></h4>
             <p class="subtitle mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              Add your own commands to your liking, Easy handling of commands!
             </p>
           </div>
           <div class="column" data-aos="fade-left">
@@ -202,13 +194,10 @@
           </div>
           <div class="column">
             <h4 class="title">
-              Feature <span class="has-text-primary">#2</span>
+              User <span class="has-text-primary">App</span>
             </h4>
             <p class="subtitle mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              Arexium is one of the first Apps to use User apps! This means you can use Arexium Anywhere!
             </p>
           </div>
         </div>
@@ -220,13 +209,10 @@
         <div class="columns mt-6">
           <div class="column mr-6">
             <h4 class="title">
-              Feature <span class="has-text-warning">#3</span>
+              Multi-Game<span class="has-text-warning">Commands!</span>
             </h4>
             <p class="subtitle mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              Has commands for multiple games! Roblox, Minecraft and more!
             </p>
           </div>
           <div class="column" data-aos="fade-left">
@@ -253,12 +239,9 @@
             />
           </div>
           <div class="column">
-            <h4 class="title">Feature <span class="has-text-info">#4</span></h4>
+            <h4 class="title">Image<span class="has-text-info">Manipulation</span></h4>
             <p class="subtitle mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              Make Animated Gifs, Memes and more right in Discord!
             </p>
           </div>
         </div>
@@ -276,17 +259,17 @@
 
       <div class="columns mt-6">
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">000</p>
+          <p class="title has-text-weight-bold lined">4</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-server"></i> Servers</span>
         </div>
 
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">000</p>
+          <p class="title has-text-weight-bold lined">50+</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-terminal"></i> Commands</span>
         </div>
 
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">000</p>
+          <p class="title has-text-weight-bold lined">100+</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-users"></i> Users</span>
         </div>
       </div>
@@ -298,14 +281,13 @@
       <div class="columns">
         <div class="column has-text-left">
           <p class="title has-text-weight-bold">
-            Ready to try <span class="blurple">[your bot]</span>?
+            Ready to try <span class="blurple">Arexium</span>?
           </p>
           <p class="subtitle mt-3 has-text-gray">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Don't worry! This isn't all of it! Much more to come soon. 
           </p>
           <a href="#" class="button is-blurple is-medium"
-            ><strong><i class="fa-solid fa-book"></i> Get Started</strong></a
+            ><strong><i class="fa-solid fa-book"></i> Get Started!</strong></a
           >
         </div>
 
@@ -328,21 +310,20 @@
         </div>
 
         <p>
-          <span class="has-text-weight-bold">[Your Bot]</span>
+          <span class="has-text-weight-bold">Arexium</span>
           <br />
-          &copy; <span id="cp-year"></span> Copyright [Bot Owner]. All Rights
+          &copy; <span id="cp-year"></span> Copyright ITron Legends. All Rights
           Reserved.
         </p>
 
         <p style="letter-spacing: 0.1em;" class="is-uppercase">
           Website Designed By
           <a
-            href="https://jstnlt.my.id"
             class="blurple has-text-weight-bold"
             target="_blank"
-            >JstnLT</a
-          >.<br>The Original Website Design is Open Source on <a
-            href="https://github.com/JastinXyz/discord-bot-landing-page-web"
+            >ITron Legends</a
+          >.<br> Website Open Source on <a
+            href="https://github.com/ITron-Legends/ArexiumWebsite/"
             class="blurple has-text-weight-bold"
             target="_blank"
             >Github</a
