--- a/index.html
+++ b/index.html
@@ -116,16 +116,12 @@
                 <a href="#" class="button is-info">
                   <strong>Add App</strong>
                 </a>
-
-                <a href="#" class="button is-primary is-outlined">
-                  <strong><i class="fa-solid fa-crown"></i> Not available</strong>
-                </a>
               </div>
             </div>
             <div class="column mt-6" data-aos="fade-left">
               <img
                 class="image has-image-centered vert-move mt-4"
-                src="assets/img/GIF_20240320_230159_628.gif"
+                src="assets/img/e3b795e0-dcd4-4c14-9718-2785cb6d98ba.png"
                 alt="hero image"
                 style="width: 20rem;"
               />
