--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     >
       <div class="navbar-brand mt-2 mb-2">
         <a class="navbar-item" href="#">
-          <strong>Arexium</strong>
+          <strong>Arexium </strong>
 
           <!-- or if you want to use image -->
           <img
@@ -160,7 +160,7 @@
       <div class="single-feature">
         <div class="columns mt-6">
           <div class="column mr-6">
-            <h4 class="title">Modular<span class="blurple">Design</span></h4>
+            <h4 class="title">Modular<span class="blurple"> Design</span></h4>
             <p class="subtitle mt-3">
               Add your own commands to your liking, Easy handling of commands!
             </p>
@@ -190,7 +190,7 @@
           </div>
           <div class="column">
             <h4 class="title">
-              User <span class="has-text-primary">App</span>
+              User <span class="has-text-primary"> Apps</span>
             </h4>
             <p class="subtitle mt-3">
               Arexium is one of the first Apps to use User apps! This means you can use Arexium Anywhere!
@@ -205,7 +205,7 @@
         <div class="columns mt-6">
           <div class="column mr-6">
             <h4 class="title">
-              Multi-Game<span class="has-text-warning">Commands!</span>
+              Multi-Game<span class="has-text-warning"> Commands!</span>
             </h4>
             <p class="subtitle mt-3">
               Has commands for multiple games! Roblox, Minecraft and more!
@@ -235,7 +235,7 @@
             />
           </div>
           <div class="column">
-            <h4 class="title">Image<span class="has-text-info">Manipulation</span></h4>
+            <h4 class="title">Image<span class="has-text-info"> Manipulation</span></h4>
             <p class="subtitle mt-3">
               Make Animated Gifs, Memes and more right in Discord!
             </p>
