--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta property="og:type" content="Arexium the Next Gen Discord Bot!">
+    <meta property="og:title" content="Arexium" />
+    <meta property="og:description" content="Arexium the Next-Gen Discord bot! fully modular, Advanced Commands and more!" />
+    <meta property="og:url" content="https://itron-legends.github.io/ArexiumWebsite/" />
+    <meta property="og:image" content="full thumbnail path" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Arexium Next-Gen Utilities!</title>
+    <title>Arexium the Next-Gen Bot</title>
     <link rel="stylesheet" href="assets/css/bulma.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
