--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Arexium" />
     <meta property="og:description" content="Arexium the Next-Gen Discord bot! fully modular, Advanced Commands and more!" />
     <meta property="og:url" content="https://itron-legends.github.io/ArexiumWebsite/" />
-    <meta property="og:image" content="full thumbnail path" />
+    <meta property="og:image" content="assets/Picsart_24-03-20_22-32-35-058.jpg" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Arexium the Next-Gen Bot</title>
