--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta property="og:type" content="Arexium the Next Gen Discord Bot!">
     <meta property="og:title" content="Arexium" />
