--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
           <div class="navbar-item">
             <div class="buttons">
-              <a href="#" class="button is-blurple">
+              <a href="#" class="button is-blurple is dark">
                 <strong
                   ><i class="fa-solid fa-right-to-bracket mr-2"></i>
                   Login</strong
@@ -120,7 +120,7 @@
                 
               </p>
               <div class="buttons">
-                <a href="#" class="button is-info">
+                <a href="#" class="button is-blurple">
                   <strong>Add App</strong>
                 </a>
               </div>
