--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
           <div class="navbar-item">
             <div class="buttons">
-              <a href="#" class="button is-blurple is dark">
+              <a href="#" class="button is-blurple is-dark">
                 <strong
                   ><i class="fa-solid fa-right-to-bracket mr-2"></i>
                   Login</strong
