--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 
           <div class="navbar-item">
             <div class="buttons">
-              <a href="#" class="button is-blurple is-dark">
+              <a href="https://discord.com/oauth2/authorize?client_id=1143816212929859584" class="button is-blurple is-dark">
                 <strong
                   ><i class="fa-solid fa-right-to-bracket mr-2"></i>
-                  Login</strong
+                  Add App</strong
                 >
               </a>
             </div>
@@ -119,7 +119,7 @@
                 
               </p>
               <div class="buttons">
-                <a href="#" class="button is-blurple">
+                <a href="https://discord.com/oauth2/authorize?client_id=1143816212929859584" class="button is-blurple">
                   <strong>Add App</strong>
                 </a>
               </div>
