--- a/index.html
+++ b/index.html
@@ -329,6 +329,16 @@
             class="blurple has-text-weight-bold"
             target="_blank"
             >Github</a
+          >.<br><a
+            href="https://github.com/ITron-Legends/ArexiumWebsite/"
+            class="blurple has-text-weight-bold"
+            target="_blank"
+            >Privacy Policy</a
+          ><a
+            href="https://github.com/ITron-Legends/ArexiumWebsite/"
+            class="blurple has-text-weight-bold"
+            target="_blank"
+            >Terms of Service</a
           >
         </p>
       </div>
